--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ DefaultContentLanguage = "vi"
 SectionPagesMenu = "main"
 Paginate = 15 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = "G-2CCCPR8E1S"
+disqusShortname = "whyelsetheyare"
 enableRobotsTXT = true
 
 [languages]
@@ -43,3 +44,4 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   featured_image = "/images/theme.jpg"
   recent_posts_number = 5
+  commentoEnable = true
