--- a/config.toml
+++ b/config.toml
@@ -44,5 +44,6 @@ enableRobotsTXT = true
   rss = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
+  post_content_classes = "sans-serif"
   featured_image = "/images/theme.jpg"
   recent_posts_number = 5
