--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Why else they are"
-baseURL = "https://whyelsetheyare.netlify.app"
+baseURL = "https://whyelsetheyare.tk"
 languageCode = "en-us"
 theme = "gohugo-theme-ananke"
 
