--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,6 +25,7 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'date' }
+      - { label: 'Table of content', name: 'toc', widget: 'boolean', default: true }
       - { label: 'Description', name: 'description', widget: 'string', required: false }
       - { label: 'Featured Image', name: 'featured_image', widget: 'image', required: false  }
       - { label: 'Tags', name: 'tags', widget: 'list', field: {name: tag, label: Tag, widget: string}, required: false }
@@ -60,6 +61,7 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'date' }
+      - { label: 'Table of content', name: 'toc', widget: 'boolean', default: true }
       - { label: 'Description', name: 'description', widget: 'string', required: false }
       - { label: 'Featured Image', name: 'featured_image', widget: 'image', required: false  }
       - { label: 'Tags', name: 'tags', widget: 'list', field: {name: tag, label: Tag, widget: string}, required: false }
